--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#CCFF90</color>
+    <color name="colorPrimaryDark">#689F38</color>
+    <color name="colorAccent">#FF6E40</color>
 
     <color name="colorGrey">#9E9E9E</color>
 </resources>
