--- a/app/src/main/res/menu/favorite.xml
+++ b/app/src/main/res/menu/favorite.xml
@@ -3,9 +3,8 @@
       xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:title="Item"
+            android:title="@string/favorites_title"
             android:id="@+id/favorite"
             app:showAsAction="always"
-            android:iconTint="@android:color/white"
             android:icon="@drawable/ic_favorite"/>
 </menu>
