--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#CCFF90</color>
+    <color name="colorPrimary">#AEEA00</color>
     <color name="colorPrimaryDark">#689F38</color>
     <color name="colorAccent">#FF6E40</color>
 
