--- a/app/src/main/res/layout/item_cat.xml
+++ b/app/src/main/res/layout/item_cat.xml
@@ -6,8 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
-        app:cardElevation="4dp"
-        android:layout_margin="@dimen/margin_small">
+        app:cardElevation="4dp">
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="wrap_content"
